# egauge-mcp

./: .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/egauge_mcp/: __init__.py  __main__.py  analysis.py  client.py  config.py  server.py
tests/: test_analysis.py  test_parser.py
